--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="icon">
+          <div class="icon" style="padding-left: 5px;">
             <P>BEST SKILL ON</P>
             <div class="iconset1">
               <a class="nav-link in"><i class="fa-brands fa-java fa-2x"></i></a>
