--- a/portfolio.html
+++ b/portfolio.html
@@ -49,9 +49,7 @@
         <p>WELCOME TO MY WORLD</p>
         <h1>Hi, I'm <span style="color: crimson;">Sarankumar V</span></h1>
         <h1>a Fresher.</h1>
-        <p>Recent Computer Science graduate skilled in Java and Embedded C, seeking an entry-level developer role to
-          apply my programming knowledge and contribute to innovative projects. Eager to learn and grow within a dynamic
-          team environment.</p>
+        <p>Final-year Computer Science student skilled in Java and Embedded C, seeking an entry-level developer role to apply my programming knowledge and contribute to innovative projects. Eager to learn and grow within a dynamic team environment.</p>
         <br> <br><br><br><br><br><br>
         <div class="icondiv">
           <div class="icon">
